# swf-common-lib

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  run_tests.py  run_tests.sh
.github/workflows/: build-pull-request.yaml  publish-to-gpr.yml  publish-to-testpypi.yml  swf-common-lib-ci.yml
code-samples/: README.md
code-samples/mq/: README-queue-messaging.md  README.md  queue_dispatcher_example.py  queue_worker_example.py
config/: README.md
docs/: BaseAgent_MultiSubscriber.md  OPTIMIZATION_SUMMARY.md
mq_comms/: README.md  __init__.py  mq_comms.py
rucio_comms/: README.md  __init__.py  rucio_comms.py  utils.py
src/swf_common_lib/: api_utils.py  base_agent.py  config_utils.py  logging_utils.py  rest_logging.py  rucio_utils.py
tests/: conftest.py  test_base_agent.py  test_logging_utils.py
utils/: environment.py
