[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swf-common-lib"
version = "0.0.8"
description = "A common library for SWF components."
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
"Repository" = "https://github.com/bnlnpps/swf-common-lib"
